--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ python:
   - "2.7"
   - "3.3"
   - "pypy"
-script: python setup.py test
+script:
+  - python setup.py build_ext -i
+  - python setup.py test
