Python 3.6 is out

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,9 @@ matrix:
     python: '3.5'
   - os: linux
     dist: trusty
+    python: '3.6'
+  - os: linux
+    dist: trusty
     python: pypy
   - os: osx
     language: objective-c
