Add Python 3.6.3 to appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ environment:
 
   matrix:
     - PYTHON: "C:\\Python27"
-      PYTHON_VERSION: "2.7.10"
+      PYTHON_VERSION: "2.7.14"
       PYTHON_ARCH: "32"
 
     - PYTHON: "C:\\Python33"
@@ -23,8 +23,12 @@ environment:
       PYTHON_VERSION: "3.5.0"
       PYTHON_ARCH: "32"
 
+    - PYTHON: "C:\\Python35"
+      PYTHON_VERSION: "3.6.3"
+      PYTHON_ARCH: "32"
+
     - PYTHON: "C:\\Python27-x64"
-      PYTHON_VERSION: "2.7.10"
+      PYTHON_VERSION: "2.7.14"
       PYTHON_ARCH: "64"
 
     - PYTHON: "C:\\Python33-x64"
@@ -37,6 +41,10 @@ environment:
 
     - PYTHON: "C:\\Python35-x64"
       PYTHON_VERSION: "3.5.0"
+      PYTHON_ARCH: "64"
+
+    - PYTHON: "C:\\Python35-x64"
+      PYTHON_VERSION: "3.6.3"
       PYTHON_ARCH: "64"
 
 clone_depth: 25
