Fix #201: pyenv usage on OS X

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 cache:
   directories:
   - "$HOME/.cache/pip"
-  - "$HOME/.pyenv"
+  - "$HOME/.pyenv-simplejson"
 matrix:
   include:
   - os: linux
