--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,11 +20,15 @@ environment:
       PYTHON_ARCH: "32"
 
     - PYTHON: "C:\\Python35"
-      PYTHON_VERSION: "3.5.0"
+      PYTHON_VERSION: "3.5.6"
       PYTHON_ARCH: "32"
 
-    - PYTHON: "C:\\Python35"
-      PYTHON_VERSION: "3.6.3"
+    - PYTHON: "C:\\Python36"
+      PYTHON_VERSION: "3.6.6"
+      PYTHON_ARCH: "32"
+
+    - PYTHON: "C:\\Python37"
+      PYTHON_VERSION: "3.7.0"
       PYTHON_ARCH: "32"
 
     - PYTHON: "C:\\Python27-x64"
@@ -40,11 +44,15 @@ environment:
       PYTHON_ARCH: "64"
 
     - PYTHON: "C:\\Python35-x64"
-      PYTHON_VERSION: "3.5.0"
+      PYTHON_VERSION: "3.5.6"
       PYTHON_ARCH: "64"
 
     - PYTHON: "C:\\Python36-x64"
-      PYTHON_VERSION: "3.6.3"
+      PYTHON_VERSION: "3.6.6"
+      PYTHON_ARCH: "64"
+
+    - PYTHON: "C:\\Python37-x64"
+      PYTHON_VERSION: "3.7.0"
       PYTHON_ARCH: "64"
 
 clone_depth: 25
