Use xenial distro for Python 3.7
per https://github.com/travis-ci/travis-ci/issues/9815

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ matrix:
     python: '3.6'
     env: BUILD_WHEEL=true
   - os: linux
-    dist: trusty
+    dist: xenial
     sudo: required
     services:
       - docker
