require docker and sudo for xenial py3.7

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,9 @@ matrix:
     python: '3.6'
   - os: linux
     dist: xenial
-    sudo: false
+    sudo: required
+    services:
+      - docker
     python: '3.7'
     env: BUILD_SDIST=true
   - os: linux
