--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,7 @@ cache:
   - "$HOME/.cache/pip"
   - "$HOME/.pyenv"
 python:
-  - 2.6
   - 2.7
-  - 3.3
   - 3.4
   - 3.5
   - 3.6
@@ -16,6 +14,10 @@ python:
   - pypy3
 matrix:
   include:
+  - python: '2.6'
+    dist: trusty
+  - python: '3.3'
+    dist: trusty
   - python: '3.7'
     services:
       - docker
