--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,17 @@ python:
   - 3.5
   - 3.6
   - 3.7
-  - pypy
-  - pypy3
 matrix:
   include:
   - python: '2.6'
     dist: trusty
   - python: '3.3'
     dist: trusty
-  - python: '3.7'
+  - python: pypy
+    dist: trusty
+  - python: pypy3
+    dist: trusty
+  - python: 3.7
     services:
       - docker
     env: BUILD_SDIST=true
