--- a/appveyor.yml
+++ b/appveyor.yml
@@ -52,7 +52,11 @@ environment:
       PYTHON_ARCH: "64"
 
     - PYTHON: "C:\\Python37-x64"
-      PYTHON_VERSION: "3.7.0"
+      PYTHON_VERSION: "3.7.5"
+      PYTHON_ARCH: "64"
+
+    - PYTHON: "C:\\Python37-x64"
+      PYTHON_VERSION: "3.8.0"
       PYTHON_ARCH: "64"
 
 clone_depth: 25
