--- a/.travis.yml
+++ b/.travis.yml
@@ -21,19 +21,24 @@ matrix:
     services:
     - docker
     env: BUILD_SDIST=true
-  - name: Python 2.7.12 on macOS
+  - name: Python 2.7.17 on macOS
     os: osx
     language: objective-c
-    env: PYENV_VERSION=2.7.12
-  - name: Python 3.6.5 on macOS
+    env: PYENV_VERSION=2.7.17
+  - name: Python 3.6.9 on macOS
     os: osx
     language: objective-c
-    env: PYENV_VERSION=3.6.5
-  - name: Python 3.7.4 on macOS
+    env: PYENV_VERSION=3.6.9
+  - name: Python 3.7.5 on macOS
     os: osx
-    osx_image: xcode11.2
+    osx_image: xcode11.3
     language: objective-c
-    env: PYENV_VERSION=3.7.4
+    env: PYENV_VERSION=3.7.5
+  - name: Python 3.8.0 on macOS
+    os: osx
+    osx_image: xcode11.3
+    language: objective-c
+    env: PYENV_VERSION=3.8.0
 install:
 - "./.travis/install.sh"
 script:
