--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,9 @@ matrix:
   - python: 3.8
   - python: 3.8
     arch: arm64
+  - python: 3.9
+  - python: 3.9
+    arch: arm64
   - python: pypy
   - python: pypy3
   - python: 3.8
