--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -70,8 +70,11 @@ jobs:
       - name: Install dependencies
         run: python -m pip install --upgrade pip setuptools wheel
 
-      - name: Build sdist and wheel
-        run: DISABLE_SPEEDUPS=1 python setup.py sdist bdist_wheel
+      - name: Build sdist
+        run: python setup.py sdist
+
+      - name: Build wheel
+        run: DISABLE_SPEEDUPS=1 python setup.py bdist_wheel
 
       - uses: actions/upload-artifact@v2
         if: "github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/')"
