Add matrix configuration to upload artifact name

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -53,7 +53,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/')
-        name: wheels
+        name: wheels-${{ matrix.os }}
         with:
           path: ./wheelhouse/*.whl
 
