--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -20,6 +20,7 @@ jobs:
         os:
         - 'ubuntu-latest'
         python:
+          - 3.14
           - 3.13
           - pypy-3.11
           - graalpy-25.0
@@ -51,8 +52,9 @@ jobs:
           platforms: all
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.20.0
+        uses: pypa/cibuildwheel@v3.2.1
         env:
+          CIBW_BUILD: "cp3{8,9,10,11,12,13,14}-*"
           CIBW_TEST_COMMAND: >-
             python -m simplejson.tests._cibw_runner "{project}"
           CIBW_SKIP: "pp*"
@@ -85,7 +87,7 @@ jobs:
       - uses: actions/setup-python@v5
         name: Install Python
         with:
-          python-version: '3.13'
+          python-version: '3.14'
 
       - name: Install dependencies
         run: python -m pip install --upgrade pip setuptools wheel
